# cleitin-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/cleitin/: cleitin.h
include/module/: module.h
src/: main.c
src/cleitin/: cleitin.c
src/cleitin/module/: component.c  draw.c  ecs.c  network.c  window.c
